<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="194dp"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.85"
    android:background="@android:color/background_dark"
    android:gravity="center"
    android:orientation="horizontal" >
 <ImageButton
         android:id="@+id/imageButton1"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="-10dp"
         android:background="#000000"
         android:contentDescription="@string/but_contentDesc"
         android:src="@drawable/ic_launcher" />
<TextView
    android:id="@+id/sgv_id"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_vertical|right"
    android:keepScreenOn="true"
    android:text="@string/arrow_none"
    android:textColor="#ffffff"
    android:textSize="50sp"
    android:textStyle="bold" />

        <TextView
            android:id="@+id/arrow_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text="@string/arrow_none"
            android:textColor="#ffffff"
            android:textSize="30sp" />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="center_vertical"
      android:orientation="vertical" >

         <TextView
             android:id="@+id/difference"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="bottom"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:gravity="center"
             android:text="@string/arrow_none"
             android:textColor="#ffffff"
             android:textSize="18sp"
             android:visibility="visible" />

          <TextView
              android:id="@+id/minute_id"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_gravity="top"
              android:layout_marginBottom="15dp"
              android:layout_weight="1"
              android:gravity="bottom|left"
              android:text="@string/arrow_none"
              android:textColor="#ffffff"
              android:textSize="18sp" />
         
	</LinearLayout>
	</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@android:color/background_dark"
    android:gravity="center"
    android:orientation="horizontal" >

<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@android:color/background_dark"
	    android:gravity="fill_vertical|center_horizontal"
	    android:orientation="horizontal" >

	    <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom|center_horizontal"
	        android:background="@android:color/background_dark"
	        android:gravity="bottom|center_horizontal"
	        android:orientation="horizontal"
	        android:visibility="gone" >
	
	        <TextView
	            android:id="@+id/phone_battery_label_id"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:gravity="center_vertical|right"
	            android:text="@string/phone_battlabel"
	            android:textColor="#ffffff"
	            android:textSize="12sp" />
	
	        <LinearLayout
	            android:id="@+id/relativelayout2"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent" >
	
	            <ImageButton
	                android:id="@+id/phoneBattery"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="#000000"
	                android:contentDescription="@string/phone_battery"
	                android:gravity="center_vertical|right"
	                android:minHeight="30dp"
	                android:minWidth="30dp"
	                android:src="@drawable/battery_full_icon" />
	
	            <TextView
	                android:id="@+id/phone_battery_text_id"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="bottom|left"
	                android:layout_marginLeft="-10dp"
	                android:gravity="bottom"
	                android:text="@string/default_phone_batt"
	                android:textColor="#ffffff"
	                android:textSize="12sp" />
	          
	        </LinearLayout>
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/linearLayout3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:layout_marginLeft="5dp"
	        android:background="@android:color/background_dark"
	        android:orientation="horizontal"
	        android:visibility="visible" >
	
	        <TextView
	            android:id="@+id/mbg_label"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:gravity="center"
	            android:text="@string/mbg_label"
	            android:textColor="#ffffff"
	            android:textSize="14sp" />
	
	        <LinearLayout
	            android:id="@+id/relativelayout3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/mbg_value"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:text="@string/arrow_none"
	                android:textColor="#ffffff"
	                android:textSize="20sp"
	                android:textStyle="bold|italic" />
	
	            <TextView
	                android:id="@+id/mbg_time_id"
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_marginLeft="2dp"
	                android:layout_marginTop="5dp"
	                android:gravity="center"
	                android:text="@string/arrow_none"
	                android:textColor="#ffffff"
	                android:textSize="12sp" />

	        </LinearLayout>
	    </LinearLayout>

 </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp" >

            <ImageButton
                android:id="@+id/devBattery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#000000"
                android:contentDescription="@string/device_battery"
                android:gravity="center_vertical|right"
                android:minHeight="30dp"
                android:minWidth="30dp"
                android:src="@drawable/battery_full_icon" />

            <TextView
                android:id="@+id/device_battery_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="5dp"
                android:gravity="bottom"
                android:text="@string/default_dev_batt"
                android:textColor="#ffffff"
                android:textSize="12sp" />

        </LinearLayout>
            
        <LinearLayout
            android:id="@+id/relativeInslayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp" >

            <ImageButton
                android:id="@+id/resIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#000000"
                android:contentDescription="@string/device_battery"
                android:gravity="center_vertical|right"
                android:minHeight="30dp"
                android:minWidth="30dp"
                android:src="@drawable/res_full" />

            <TextView
                android:id="@+id/insulin_data_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="10dp"
                android:gravity="bottom"
                android:text="@string/insulin_data_default"
                android:textColor="#ffffff"
                android:textSize="12sp" />

        </LinearLayout>
        <ImageButton
            android:id="@+id/widgetSetting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginLeft="15dp"
            android:background="#000000"
            android:contentDescription="@string/widgetSettings"
            android:gravity="center_vertical|right"
            android:maxHeight="12dp"
            android:maxWidth="12dp"
            android:minHeight="16dp"
            android:minWidth="16dp"
            android:padding="5dp"
            android:scaleType="center"
            android:src="@drawable/settings_9_32"
            android:visibility="visible" />
    </LinearLayout>
 
</LinearLayout>